# backend

./: README.md
backend/: .gitignore  Dockerfile.prod  docker-compose.yml  nest-cli.json  package-lock.json  package.json  tsconfig.json  typeorm.config.ts
backend/scripts/: test-pro-role.ts  test-vault-deposit.ts
backend/src/: app.controller.ts  app.module.ts  main.ts
backend/src/analytic/: analytic.entity.ts  (+3 more)
backend/test/: raydium-sdk.js
contracts/vault/: .gitignore  Anchor.toml  Cargo.toml  README.md  devnet-config.example.json  mainnet-config.json  package-lock.json  package.json  tsconfig.json
contracts/vault/programs/smart-wallet/: Cargo.toml
contracts/vault/programs/smart-wallet/src/: errors.rs  events.rs  lib.rs  state.rs
contracts/vault/programs/smart-wallet/src/instructions/: close_position.rs  close_wallet.rs  collect_fees.rs  create_wallet.rs  decrease_liquidity.rs  deposit.rs  increase_liquidity.rs  mod.rs  open_position.rs  set_delegate.rs  set_paused.rs  swap_in_treasury.rs  withdraw.rs
contracts/vault/programs/vault/: Cargo.toml
contracts/vault/programs/vault/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
contracts/vault/programs/vault/src/instructions/: accept_admin.rs  cancel_rebalance.rs  close_position.rs  collect_fees.rs  decrease_liquidity.rs  deposit_sol.rs  deposit_usdc.rs  extract_protocol_fee.rs  increase_liquidity.rs  initialize.rs  migrate_vault.rs  mod.rs  open_position.rs  set_paused.rs  swap_in_treasury.rs  transfer_admin.rs  update_price.rs  withdraw.rs
contracts/vault/scripts/: 01-create-tokens.ts  02-create-pool.ts  03-initialize-vault.ts  04-test-deposit.ts  06-full-test.ts  07-admin-ops.ts  08-migrate-vault.ts  09-initialize-mainnet.ts  10-open-position-mainnet.ts  check-vault.ts  close-position.ts  debug-deposit.ts  open-position.ts  test-full.ts  test-smart-wallet.ts
frontend/: Dockerfile  docker-compose.yml  index.html  package-lock.json  package.json  swagger.json  vite.config.ts
frontend/smartDocs/: vault-frontend-integration.md  vault-invest-flow.md  vault.json
frontend/src/: App.css  App.tsx  App.tsx.save  index.css  vite-env.d.ts
(+137 files in other folders)
