[workspace]
members = [
    "programs/*"
]
resolver = "2"

[patch.crates-io]
ahash = { git = "https://github.com/tkaitchuck/aHash", tag = "v0.8.11" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
