[package]
name = "smart-wallet"
version = "0.1.0"
description = "Account Abstraction smart wallet for per-user Raydium CLMM positions"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "smart_wallet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"

# Raydium CLMM CPI for position management
raydium-clmm-cpi = { git = "https://github.com/raydium-io/raydium-cpi", branch = "anchor-0.31.1", package = "raydium-clmm-cpi", features = ["devnet"] }

# Pin versions to avoid incompatibility with Solana platform-tools rustc 1.75
blake3 = "=1.5.5"
constant_time_eq = "=0.3.1"
