[package]
name = "vault"
version = "0.1.0"
description = "Solana Vault for managed liquidity on Raydium CLMM"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
devnet = []  # Use for devnet deployment

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"

# Raydium CLMM CPI for swaps (branch for anchor 0.31.1)
raydium-clmm-cpi = { git = "https://github.com/raydium-io/raydium-cpi", branch = "anchor-0.31.1", package = "raydium-clmm-cpi" }

# Pin versions to avoid incompatibility with Solana platform-tools rustc 1.75
blake3 = "=1.5.5"
constant_time_eq = "=0.3.1"
